--- a/modules/admin/tabs/30:Extra_services/page.html
+++ b/modules/admin/tabs/30:Extra_services/page.html
@@ -1,3 +1,6 @@
+Nothing here yet...
+
+<comment>
 <define tag=uservar><b>&title;</b> /// <input size=&size; type=&type; name=&name; value='#&name;#'>\\\
 </define>
 
@@ -27,4 +30,5 @@
       </form>
     </preparse>
   </preparse>
-</formoutput>  
+</formoutput>
+</comment>
