--- a/html/webadmin/template_editor.html
+++ b/html/webadmin/template_editor.html
@@ -7,29 +7,81 @@
 
 <br><br>
 
+<if variable=types>
+<sqloutput query="select * from template_vars">
+  #name# #type# <br>
+</sqloutput>
+<br>
+  <pike>
+    string r = "";
+    foreach(indices(id->variables), string variable)
+      r += variable + " : " + id->variables[variable] + "<br>";
+    return r;
+  </pike>
+</if>
+
+<if variable=help>
+<wizard help>
+<sqlquery help>
+</if>
+
 <if variable=edit>
-  <preparse tag=wizard name="Select some colors...">
+  <wizard preparse name="Edit template preferences">
   <formoutput quote='¤'>
     <sqloutput query="select * from template_vars where
-                      group_name='¤edit¤'">
+                      group_name='¤edit¤' and category='¤category¤'">
       <page>
        <input type=hidden name=edit value='¤edit:quote=mysql¤'>
+       <input type=hidden name=category value='¤category:quote=mysql¤'>
         <h3>#title#</h3>
-        <var name=#name# type=#type#>
+        <cvar preparse name=variable_#id# type=#type#><sqloutput quote='£' query="select * from customers_preferences where customer_id='¤customer_id¤' and variable_id='#id#'">£value£</sqloutput></cvar>
 	<br>
         #help#<br>
+	name=variable_#id# type=#type# <br>
+        <sqloutput quote='£' query="select * from customers_preferences
+            where customer_id='¤customer_id¤' and variable_id='#id#'">
+	  default=£value£  
+	</sqloutput>
       </page>
-      <done>
-         *saving...*
-      </done>
     </sqloutput>
+    <done>
+      *saving...* <br>
+      <pike>
+        string r = "";
+	
+	foreach(indices(id->variables), string variable) {
+          if(sscanf(variable, "variable_%d%*s", int variable_id)>0) {
+            r += "<sqlquery query=\""
+	         "delete from customers_preferences "
+		 "where customer_id='¤customer_id¤' and "
+		 "variable_id='"+variable_id+"'"
+		 "\"><br>\n";
+	    r += "<sqlquery query=\""
+	         "insert into customers_preferences "
+	         "(customer_id,variable_id,value) "
+	         " values ('¤customer_id¤','"+variable_id+"','"+
+		 id->variables[variable]+"')"+
+		 "\"><br>\n";
+	  }
+	}
+        return r;
+      </pike>
+      
+      <tablify preparse nice cellseparator='='>
+        Variable=Value
+        <insert variables=full>
+      </tablify>
+      <sql>
+    </done>
   </formoutput>
-  </preparse>
-</if>    
+  </wizard>
+</if>
+<else>
   <h3>Template variables</h3>
   <ul>
-    <sqloutput query='select distinct group_name from template_vars'>
-      <li><a href="template_editor.html?edit=#group_name#">
+    <sqloutput query="select distinct group_name from template_vars
+    where category='tmpl'">
+      <li><a href="template_editor.html?edit=#group_name#&category=tmpl">
         #group_name#
       </a>
     </sqloutput>
@@ -37,11 +89,12 @@
 
   <h3>Navigation variables</h3>
   <ul>
-    <sqloutput query='select distinct group_name from nav_template_vars'>
-      <li><a href="template_editor.html?nav_template_wizarde=#group_name#">
+    <sqloutput query="select distinct group_name from template_vars
+    where category = 'nav'">
+      <li><a href="template_editor.html?category=nav&edit=#group_name#">
         #group_name#
       </a>
     </sqloutput>
   </ul>
-
+</else>
 </tmpl_body>
