--- a/tools/templateinfo.html
+++ b/tools/templateinfo.html
@@ -22,7 +22,7 @@
   <!--  Template variables  -->
   <!--  General  -->
   <insert name="tmpl_template_name" title="Template name" group_name="General"
-          type="template" help="Template name" category="tmpl">
+          type="select" help="Template name" category="tmpl">
 	  
   <insert name="tmpl_bgcolor" title="Background color" group_name="General"
           type="color" help="Background color" category="tmpl">
@@ -56,7 +56,7 @@
   <!--  Navigation Variables  -->
   <!--  General  -->
   <insert name="nav_name" title="Navigation name" group_name="General"
-          type="string" help="Navigation template name" category="nav">
+          type="select" help="Navigation template name" category="nav">
 	  
   <insert name="nav_size" title="Navigation size" group_name="General"
           type="int" help="Navigation size" category="nav">
