--- a/modules/autoweb/tabs/10:Template_Editor/page.html
+++ b/modules/autoweb/tabs/10:Template_Editor/page.html
@@ -1,4 +1,3 @@
-<br>
 
 <if variable=types>
 <sqloutput query="select * from template_vars">
@@ -20,19 +19,32 @@
 </pike>
 
 <if variable=edit>
-  <wizard preparse name="Edit template preferences">
   <formoutput quote='¤'>
-    <sqloutput query="select * from template_vars where
-                      group_name='¤edit¤' and category='¤category¤'">
+  <sqloutput quote='¥' query="select * from template_wizards where id='¤edit¤'">
+  <wizard preparse name="¥title:quote=mysql¥">
+    <sqloutput quote='#' query="select * from template_vars where
+                      wizard_id='¤edit¤'">
       <page>
        <input type=hidden name=edit value='¤edit:quote=mysql¤'>
        <input type=hidden name=category value='¤category:quote=mysql¤'>
         <h3>#title#</h3>
-	<cset preparse variable=options><sqloutput quote='£' query="select * from templates where category='¤category¤'">£name£,</sqloutput></cset>
-	<cset preparse variable=default><sqloutput quote='£' query="select * from customers_preferences where customer_id='¤customer_id¤' and variable_id='#id#'">£value£</sqloutput></cset>
+	<cset preparse variable=options><pike>
+	  string query=
+	    "<sqloutput quote='£' query="
+	    "\"select * from templates where category='¤category¤'\">"
+            "£name£,</sqloutput>";
+          return ((parse_rxml(query, id)/",")-({ "" }))*",";
+	  </pike></cset>
+	<cset preparse variable=default><pike>
+	  return
+	    "<sqloutput quote='£' query="
+	    "\"select * from customers_preferences "
+	    "where customer_id='¤customer_id¤' and variable_id='#id#'\">"
+	    "£value£</sqloutput>";
+          </pike></cset>
 	<formoutput quote='$'>
-	  <var preparse name=variable_#id# type=#type#
-	        options=$options$ default=$default$>
+	  <var preparse name="variable_#id#" type="#type#"
+	        options="$options$" default="$default$">
 	</formoutput>
 	<br>
         #help#<br>
@@ -67,30 +79,41 @@
         return r;
       </pike>
     </done></noparse></noparse>
-  </formoutput>
   </wizard>
+  </sqloutput>
+  </formoutput>
 </if>
 <if variable=show_menu>
-  <h3>Template variables</h3>
-  <ul>
-    <sqloutput query="select * from template_vars
-    where category='tmpl' group by group_name order by id">
-      <li><a href="./?edit=#group_name#&category=tmpl">
-        #group_name#
-      </a>
-    </sqloutput>
-  </ul>
 
-  <h3>Navigation variables</h3>
-  <ul>
-    <sqloutput query="select * from template_vars
-    where category='nav' group by group_name order by id">
-      <li><a href="./?edit=#group_name#&category=nav">
-        #group_name#
-      </a>
+  <h3>Template wizards</h3>
+  <blockquote><dl>
+    <sqloutput query="select * from template_wizards where category='tmpl'">
+      <dt><font size=+1>
+         <a href="./?edit=#id#&category=#category#">#name#...</a>
+      </font>
+      <dd>#title#
     </sqloutput>
-  </ul>
+  </dl></blockquote>
+  <h3>Navigation wizards</h3>
+  <blockquote><dl>
+    <sqloutput query="select * from template_wizards where category='nav'">
+      <dt><font size=+1>
+        <a href="./?edit=#id#&category=#category#">#name#...</a>
+      </font>
+      <dd>#title#
+    </sqloutput>
+  </dl></blockquote>
+
+  <form method=get>
+    <input type=submit name=update value="Update template">
+  </form>
+
+  <if variable=update>
+    <autosite-webadm-update-template>
+  </if>
 </if>
+
+
 
 <comment>
 <tablify preparse nice cellseparator='='>Variable=Value
