--- a/tools/templateinfo.html
+++ b/tools/templateinfo.html
@@ -3,76 +3,108 @@
   <delete all>
 
   <!--  Template files  -->
-  <insert name="Test1" filename="test1.tmpl" category="tmpl">
-  <insert name="Test2" filename="test2.tmpl" category="tmpl">
-  <insert name="Test3" filename="test3.tmpl" category="tmpl">
+  <insert name="Template 1" filename="tmpl1.tmpl" category="tmpl">
+  <insert name="Template 2" filename="tmpl2.tmpl" category="tmpl">
+  <insert name="Template 3" filename="tmpl3.tmpl" category="tmpl">
 
   <!--  Navigation files  -->
-  <insert name="Nav1" filename="nav1.ntmpl" category="nav">
-  <insert name="Nav2" filename="nav2.ntmpl" category="nav">
-  <insert name="Nav3" filename="nav3.ntmpl" category="nav">
+  <insert name="Nav 1" filename="nav1.ntmpl" category="nav">
+  <insert name="Nav 2" filename="nav2.ntmpl" category="nav">
+  <insert name="Nav 3" filename="nav3.ntmpl" category="nav">
 
 </sql-insert>
 
 
-<sql-insert table="template_vars">
+<sql-insert table="template_wizards">
 
+  <delete all>
+
+  <!--  Template groups  -->
+  <insert name="General" title="Edit general template preferences"
+          help="help" category="tmpl">
+	  
+  <insert name="Heading 1" title="Edit heading 1 preferences"
+          help="help" category="tmpl">
+	  
+  <insert name="Heading 2" title="Edit heading 2 preferences"
+          help="help" category="tmpl">
+
+  <!--  Navigation groups  -->
+  <insert name="General" title="Edit general navigation preferences"
+          help="help" category="nav">
+	  
+  <insert name="Color" title="Edit navigation colors"
+          help="help" category="nav">
+    
+</sql-insert>
+
+
+<sql-insert table="template_vars" switchvariable>
   <delete all>
 
   <!--  Template variables  -->
   <!--  General  -->
-  <insert name="tmpl_template_name" title="Template name" group_name="General"
+  <insert name="template_name" title="Template name" wizard_name="General"
           type="select" help="Template name" category="tmpl">
 	  
-  <insert name="tmpl_bgcolor" title="Background color" group_name="General"
+  <insert name="bg_color" title="Background color" wizard_name="General"
           type="color" help="Background color" category="tmpl">
 
-  <insert name="tmpl_fgcolor" title="Foreground color" group_name="General"
-          type="color" help="Foreground color" category="tmpl">
+  <insert name="text_color" title="Text color" wizard_name="General"
+          type="color" help="Text color" category="tmpl">
+
+  <insert name="link_color" title="Link color" wizard_name="General"
+          type="color" help="Link color" category="tmpl">
+
+  <insert name="vlink_color" title="Visited link color" wizard_name="General"
+          type="color" help="Visited link color" category="tmpl">
+
+  <insert name="alink_color" title="Active link color" wizard_name="General"
+          type="color" help="Active link color" category="tmpl">
 
 
   <!--  Heading 1  -->	  
-  <insert name="tmpl_h1_color" title="Heding 1 color" group_name="Heading 1"
+  <insert name="h1_color" title="Heding 1 color" wizard_name="Heading 1"
           type="color" help="Heding 1 color" category="tmpl">
 
-  <insert name="tmpl_h1_font" title="Heading 1 font" group_name="Heading 1"
+  <insert name="h1_font" title="Heading 1 font" wizard_name="Heading 1"
           type="font" help="Heading 1 font" category="tmpl">
 
-  <insert name="tmpl_h1_size" title="Heading 1 size" group_name="Heading 1"
+  <insert name="h1_size" title="Heading 1 size" wizard_name="Heading 1"
           type="int" help="Heading 1 size" category="tmpl">
 	  
 
   <!--  Heading 2  -->	  
-  <insert name="tmpl_h2_color" title="Heading 2 color" group_name="Heading 2"
+  <insert name="h2_color" title="Heading 2 color" wizard_name="Heading 2"
           type="color" help="Heading 2 color" category="tmpl">
 
-  <insert name="tmpl_h2_font" title="Heading 1 font" group_name="Heading 2"
+  <insert name="h2_font" title="Heading 1 font" wizard_name="Heading 2"
           type="font" help="Heading 2 font" category="tmpl">
 
-  <insert name="tmpl_h2_size" title="Heading 2 size" group_name="Heading 2"
+  <insert name="h2_size" title="Heading 2 size" wizard_name="Heading 2"
           type="int" help="Heading 2 size" category="tmpl">
 	  
 
   <!--  Navigation Variables  -->
   <!--  General  -->
-  <insert name="nav_name" title="Navigation name" group_name="General"
+  <insert name="nav_name" title="Navigation name" wizard_name="General"
           type="select" help="Navigation template name" category="nav">
 	  
-  <insert name="nav_size" title="Navigation size" group_name="General"
+  <insert name="nav_size" title="Navigation size" wizard_name="General"
           type="int" help="Navigation size" category="nav">
 	  
-  <insert name="nav_font" title="Navigation font" group_name="General"
+  <insert name="nav_font" title="Navigation font" wizard_name="General"
           type="font" help="Navigation font" category="nav">
 
 	  
   <!--  Color  -->
-  <insert name="nav_color1" title="Navigation color1" group_name="Color"
+  <insert name="nav_color1" title="Navigation color1" wizard_name="Color"
           type="color" help="Navigation color1" category="nav">
 	  
-  <insert name="nav_color2" title="Navigation color2" group_name="Color"
+  <insert name="nav_color2" title="Navigation color2" wizard_name="Color"
           type="color" help="Navigation color2" category="nav">
 
-  <insert name="nav_color3" title="Navigation color3" group_name="Color"
+  <insert name="nav_color3" title="Navigation color3" wizard_name="Color"
           type="color" help="Navigation color3" category="nav">
 
 </sql-insert>
