--- a/modules/autoweb/tabs/10:Template_Editor/page.html
+++ b/modules/autoweb/tabs/10:Template_Editor/page.html
@@ -86,7 +86,7 @@
   <blockquote><dl>
     <sqloutput query="select * from template_wizards where category='tmpl'">
       <dt><font size=+1>
-         <a href="./?edit=#id#&category=#category#">#name#...</a>
+         <a href="./?edit=#id#">#name#...</a>
       </font>
       <dd>#title#
     </sqloutput>
@@ -95,7 +95,7 @@
   <blockquote><dl>
     <sqloutput query="select * from template_wizards where category='nav'">
       <dt><font size=+1>
-        <a href="./?edit=#id#&category=#category#">#name#...</a>
+        <a href="./?edit=#id#">#name#...</a>
       </font>
       <dd>#title#
     </sqloutput>
