--- a/sites/1/index.html
+++ b/sites/1/index.html
@@ -1,1 +1,10 @@
-<h1>Foobolaget</h1>Enjoy...
+<doctitle>Huvudsida</doctitle>
+
+<docdata>
+  <h1><autosite-webadm-customername></h1>
+  Hej på dig<br>
+
+  <a href="www.gazonkbolaget.se">En länk</a><br>
+  <a href="www.idonex.se">www.idonex.se</a><br>
+  <a href="roxen.idonex.se">roxen.idonex.se</a><br>
+</docdata>
