Improved some wizards
Rev: modules/autoweb/Tab.pmod:1.5
Rev: modules/autoweb/tabs/20:HTML_Editor/page.pike:1.6
Rev: modules/autoweb/tabs/20:HTML_Editor/wizards/create.pike:1.4
Rev: modules/autoweb/tabs/20:HTML_Editor/wizards/edit_md.h:1.2
Rev: modules/autoweb/tabs/20:HTML_Editor/wizards/edit_md.pike:1.4
Rev: modules/autoweb/tabs/20:HTML_Editor/wizards/upload.pike:1.3
Rev: modules/autoweb/tabs/25:Menu_Editor/page.pike:1.1
Rev: modules/autoweb/templates/default.tmpl:1.2
Rev: modules/autoweb/webadm.pike:1.8
Rev: sites/1/index.html:1.4
Rev: templates/tmpl2.tmpl:1.2

--- a/sites/1/index.html
+++ b/sites/1/index.html
@@ -1,5 +1,5 @@
 <h1><autosite-webadm-customername></h1>
-Hej på dig<br>
+Hej på dig!!!<br>
 
 <a href="www.gazonkbolaget.se">En länk</a><br>
 <a href="www.idonex.se">www.idonex.se</a><br>
